crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_atx_interrupts_reduced_marker_lazy_blockquote_depth3_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 99
expression: cst_output
---
DOCUMENT@0..19
  BLOCK_QUOTE@0..19
    BLOCK_QUOTE_MARKER@0..1 ">"
    BLOCK_QUOTE@1..19
      BLOCK_QUOTE_MARKER@1..2 ">"
      BLOCK_QUOTE@2..9
        BLOCK_QUOTE_MARKER@2..3 ">"
        WHITESPACE@3..4 " "
        PARAGRAPH@4..9
          TEXT@4..8 "para"
          NEWLINE@8..9 "\n"
      BLOCK_QUOTE_MARKER@9..10 ">"
      BLOCK_QUOTE_MARKER@10..11 ">"
      WHITESPACE@11..12 " "
      HEADING@12..19
        ATX_HEADING_MARKER@12..13
          ATX_HEADING_MARKER@12..13 "#"
        WHITESPACE@13..14 " "
        HEADING_CONTENT@14..18
          TEXT@14..18 "head"
        NEWLINE@18..19 "\n"
