crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_atx_interrupts_reduced_marker_lazy_list_no_blank_before_header.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 99
expression: cst_output
---
DOCUMENT@0..19
  BLOCK_QUOTE@0..19
    BLOCK_QUOTE_MARKER@0..1 ">"
    BLOCK_QUOTE@1..10
      BLOCK_QUOTE_MARKER@1..2 ">"
      WHITESPACE@2..3 " "
      LIST@3..10
        LIST_ITEM@3..10
          LIST_MARKER@3..4 "-"
          WHITESPACE@4..5 " "
          PLAIN@5..10
            TEXT@5..9 "item"
            NEWLINE@9..10 "\n"
    BLOCK_QUOTE_MARKER@10..11 ">"
    WHITESPACE@11..12 " "
    HEADING@12..19
      ATX_HEADING_MARKER@12..13
        ATX_HEADING_MARKER@12..13 "#"
      WHITESPACE@13..14 " "
      HEADING_CONTENT@14..18
        TEXT@14..18 "head"
      NEWLINE@18..19 "\n"
